# PLATAFORMA-EDUCATIVA-OFFLINE--EDUCONECT

./: .dockerignore  .gitignore  CONTRIBUTING.md  DEPLOY.md  Dockerfile  README.md  SESION_03_JUN_2026.md  docker-compose.yml  fuentes-libros-infantiles-gratuitos.md  investigacion_curriculo_guajira.md  investigacion_etnoeducacion_wayuu.md  investigacion_proyectos_offline.md  investigacion_tendencias_edtech.md  libros_infantiles_gratuitos_colombia.md  reporte-integracion-local.md  start.sh  tts_server.py
docs/: index.html  (+6 more)
edu-conect-rural-server/: BENCHMARKS.md  Cargo.toml  DEPLOY.md  PLAN_IRRESISTIBLE.md  PROPUESTA_COMERCIAL.md  README.md  cross-compile.sh  download-biblioteca.sh  gestor_contenido.py  install-zim.sh  install.sh  start.sh
edu-conect-rural-server/config/: dnsmasq.conf  hostapd.conf
edu-conect-rural-server/deploy/: educonect.service  install.sh
edu-conect-rural-server/migrations/: 001_init.sql  002_auth.sql  003_content.sql  004_search.sql
edu-conect-rural-server/scripts/: check-hotspot.sh  download-videos.sh  parse_diccionarios.py  pregenerar-audios.sh  setup-hotspot.sh  teardown-hotspot.sh  verify-hotspot-framework.sh
edu-conect-rural-server/seeds/: 001_cursos.sql  002_admin.sql  002_modulos.sql  005_biblioteca_fts.sql
edu-conect-rural-server/src/: auth.rs  content.rs  db.rs  lib.rs  main.rs  models.rs  rate_limit.rs  zim_proxy.rs
edu-conect-rural-server/static/: dashboard.css  dashboard.html  diccionario.html  index.html  manifest.json  paleta-wayuu.css  profesor.html  sw.js  videos.html
edu-conect-rural-server/tests/: integration_test.rs
(+144 files in other folders)
