[package]
name = "edu-conect-rural-server"
version = "0.1.0"
edition = "2021"
description = "Servidor backend Rust/Axum para EduConect Rural — plataforma offline educativa para Raspberry Pi"

[dependencies]
axum = { version = "0.8", features = ["multipart"] }
tokio = { version = "1", features = ["full"] }
tower-http = { version = "0.6", features = ["fs"] }
rusqlite = { version = "0.39", features = ["bundled"] }
r2d2 = "0.8"
r2d2_sqlite = "0.34"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tower = { version = "0.5", features = ["util"] }
thiserror = "2"
jsonwebtoken = { version = "10", features = ["rust_crypto"] }
bcrypt = "0.16"
chrono = { version = "0.4", features = ["serde"] }
zim = { version = "0.4.0", optional = true }
zim-rs = "0.1.1"

[dev-dependencies]
reqwest = { version = "0.12", features = ["json"] }
tower = { version = "0.5", features = ["util"] }

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
strip = true
